Fixed bug with tooltips not showing after candidate survey results redrawing

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -243,3 +243,7 @@ input[type="text"] {
 .comment {
 	background-image: url('../img/balloon.png');
 }
+
+footer p {
+	font-size: 12px;
+}
